--- a/Examen_AllanT/Web.config
+++ b/Examen_AllanT/Web.config
@@ -8,6 +8,9 @@
 		<add name="Conexion" connectionString="Data Source=DESKTOP-FOV1KMO\SQLEXPRESS;Initial Catalog=Examen2_AllanT;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms loginUrl="Login.aspx" defaultUrl="Usuarios.aspx" />
+	  </authentication>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
